--- a/style.css
+++ b/style.css
@@ -30,9 +30,6 @@ body {
   color: var(--color-dark);
 }
 
-body {
-}
-
 /* Desk/H1 Desk */
 h1 {
   font-weight: 700;
@@ -105,8 +102,6 @@ h6 {
   line-height: 22px;
   letter-spacing: 3px;
   text-transform: uppercase;
-}
-.btn {
 }
 
 .overline {
@@ -257,4 +252,91 @@ nav .navitems:hover {
 
 .othertk input {
   padding: 10px;
+}
+
+/* Donate Plan */
+
+.donatecetagory {
+  display: flex;
+  text-align: start;
+  gap: 24px;
+  margin-top: 60px;
+}
+.donatecetagory .title {
+  margin-top: 20px;
+  margin-bottom: 16px;
+}
+
+.donteitem1 {
+  background-color: rgba(79, 157, 166, 0.1);
+  border-radius: 5px;
+  padding: 48px 24px;
+}
+
+.donteitem2 {
+  background-color: rgba(255, 89, 89, 0.1);
+  border-radius: 5px;
+  padding: 48px 24px;
+}
+
+.donteitem3 {
+  background-color: #fff4d6;
+  border-radius: 5px;
+  padding: 48px 24px;
+}
+
+.donation {
+  display: flex;
+  padding: 0 20%;
+  gap: 60px;
+  margin-bottom: 120px;
+}
+.donation .contenet {
+  width: 50%;
+  align-self: center;
+}
+.donationimg {
+  width: 50%;
+}
+
+.donation .description {
+  margin: 20px 0;
+}
+
+.donation .description2 {
+  margin-bottom: 30px;
+}
+
+.inpucontainer {
+  display: flex;
+  align-self: center;
+  justify-content: center;
+  background-color: #fff4d6;
+  border-radius: 5px;
+  padding: 70px;
+  margin-top: 60px;
+}
+.inpucontainer input {
+  padding: 18px 20px;
+  background: #d9d9d9;
+  border-radius: 5px 0px 0px 5px;
+}
+.inpucontainer button {
+  border-radius: 0px 5px 5px 0px;
+}
+
+footer {
+  padding: 40px 0;
+  background-color: var(--color-dark);
+}
+
+footer .title {
+  text-align: center;
+  color: var(--color-primary);
+}
+
+footer p {
+  text-align: center;
+  color: var(--color-white);
+  margin-top: 16px;
 }
